Modificações finais de anotações JPA na aula 02/05/22

--- a/pom.xml
+++ b/pom.xml
@@ -86,4 +86,16 @@
         </dependency>
     </dependencies>
     <name>ProjetoCS_LPOO_2022_1</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
