--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,17 @@
             <scope>test</scope>
             <version>4.11</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4.1212</version>
+            <version>42.2.24</version> 
+        </dependency>
+        -->
+        <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>9.4.1212</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
